--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div id="logo">
-            <a href="#"><img src="./img/logo.png""" alt="丹丹"></a>
+            <a href="#"><img src="./img/logo.png" alt="丹丹"></a>
         </div>
     <ol>
         <li><a href="">徵工作夥伴</a></li>
@@ -23,7 +23,16 @@
 </section>
 
 <section di="徵工作夥伴">
-    <h1></h1>
+    <h1>徵工作夥伴</h1>
+    <ul>
+        <li>月領約 29,440 元</li>
+        <li>兼職班每日工作時數 4 - 6 小時，每小時 160 元</li>
+        <li>全日班每日工作時數 8 小時起 (加班費另計每小時 1.34 倍)</li>
+        <li>享勞保/健保/意外險/勞退</li>
+        <li>不定期員工聚餐 (約每月 2 - 3 次)</li>
+        <li>學生者上班時間可配合學校課表 (工作時數約 4 - 7 小時)</li>
+        <li>依勞基法規定做滿半年即有三天特休假，並依年資累進。</li>
+    </ul>
 </section>
 </body>
 </html>
