--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
             <a href="#"><img src="./img/logo.png" alt="丹丹"></a>
         </div>
         <ol>
+            <li><a href="">最新消息</a></li>
             <li><a href="">徵工作夥伴</a></li>
             <li><a href="">本月推薦</a></li>
         </ol>
     </nav>
+
     <section id="banner"></section>
+
+    <section id="news">
+        <h1>最新消息</h1>
+        <img src="./img/banner.png" alt="最新消息2020">
+    </section>
+    
     <section id="month">
         <h1>本月推薦</h1>
         <p>「早安特惠餐」35 元起。新鮮蔬可樂餅蛋堡及新燒肉鮮蔬吉士蛋堡加 20 元飲料只要 49 元。</p>
